added "verifyDoctor" endpoint
